<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/background_layout"></include>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_message_black_24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactmsg"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:fontFamily="@font/bahnschrift"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/contactus_name"
            android:theme="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/givename"
            android:textColorHint="#A09595"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:cursorVisible="true"
            />

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#FFFFFF"
        android:layout_marginTop="3dp" />

        <EditText
            android:id="@+id/contactus_message"
            android:theme="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="start|top"
            android:hint="@string/writemsg"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:cursorVisible="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#FFFFFF"
            android:layout_marginTop="3dp" />
        <Button
            android:id="@+id/contactus_sendButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorButton"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textSize="20sp"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>