<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.account.LoginActivity"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/edit_drawable_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rounded_edit_text_black"
            android:fontFamily="@font/bahnschrift"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:drawablePadding="@dimen/edit_drawable_padding"
            android:gravity="center_vertical"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:cursorVisible="true"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:hint="@string/hint_email"
            android:drawableStart="@drawable/icon_login"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@color/cursorColor"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_edit_text_black"
            android:cursorVisible="true"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/password"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/edit_drawable_padding"
            android:drawableStart="@drawable/icon_password"
            android:paddingStart="20dp"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:paddingEnd="10dp"
            android:autofillHints="@string/password"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textCursorDrawable="@color/white"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/forgot_your_password"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/rounded_button_pink"
            android:contentDescription="@string/login"
            android:alpha="0.85"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/button_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <TextView
            android:id="@+id/goRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="@font/bahnschrift"
            android:onClick="goToTheRegisterIntent"
            android:text="@string/dont_have_an_account"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
