<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <include layout="@layout/background_layout" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/relax"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/kreglebig"
                android:contentDescription="@string/relaks"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/relaks"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/relax"
                app:layout_constraintEnd_toEndOf="@+id/relax"
                app:layout_constraintStart_toStartOf="@+id/relax"
                app:layout_constraintTop_toBottomOf="@+id/relax" />

            <ImageButton
                android:id="@+id/restaurants"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/restaurants"
                android:scaleType="center"
                android:src="@drawable/nozbig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/gastronomy"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/restaurants"
                app:layout_constraintEnd_toEndOf="@+id/restaurants"
                app:layout_constraintStart_toStartOf="@+id/restaurants"
                app:layout_constraintTop_toBottomOf="@+id/restaurants" />

            <ImageButton
                android:id="@+id/hotel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:contentDescription="@string/hotel"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/lozkobig"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/nocleg"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotel" />


            <ImageButton
                android:id="@+id/attractions"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:paddingBottom="20dp"
                android:contentDescription="@string/attraction"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/castle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/attraction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/attraction"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/attractions"
                app:layout_constraintStart_toStartOf="@+id/attractions"
                app:layout_constraintTop_toBottomOf="@+id/attractions" />

            <ImageButton
                android:id="@+id/hospitals"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hospital"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/hospital"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/hospital"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/hospitals"
                app:layout_constraintStart_toStartOf="@+id/hospitals"
                app:layout_constraintTop_toBottomOf="@+id/hospitals" />

            <ImageButton
                android:id="@+id/universities"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/univer"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/university"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/attraction_text"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/universe_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/univer"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/universities"
                app:layout_constraintStart_toStartOf="@+id/universities"
                app:layout_constraintTop_toBottomOf="@+id/universities" />

            <Button
                android:id="@+id/searchAround"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/rounded_button_pink"
                android:contentDescription="@string/searcharound"
                android:onClick="moveToMaps"
                android:text="@string/searcharound"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:alpha="0.85"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                 />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        style="@style/DrawerBar"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryDark"
        app:headerLayout="@layout/navbar_header"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@style/DrawerBar"
        app:itemTextColor="@color/white"
        app:menu="@menu/drawermenu" />
</androidx.drawerlayout.widget.DrawerLayout>