<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.RegisterActivity">
        <include layout="@layout/content_main" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/univercity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:background="#50000000"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/loginicon"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="#50000000"
                    android:fontFamily="@font/bahnschrift"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/background_light"
                    android:textColor="@android:color/background_light"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:background="#50000000"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/passwordicon"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    />
                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="#50000000"
                    android:fontFamily="@font/bahnschrift"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/background_light"
                    android:textColor="@android:color/background_light"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:background="#50000000"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/passwordicon"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    />
                <EditText
                    android:id="@+id/passRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="#50000000"
                    android:fontFamily="@font/bahnschrift"
                    android:hint="@string/repeatpass"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/background_light"
                    android:textColor="@android:color/background_light"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@color/white"/>
            </LinearLayout>

            <Button
                android:id="@+id/regBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:background="#890130"
                android:contentDescription="@string/register"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
